[gd_scene load_steps=64 format=3 uid="uid://ca3c62q5w7rd3"]

[ext_resource type="Script" uid="uid://bxgpbrctt0dg1" path="res://Assets/Scripts/cat.gd" id="1_2v165"]
[ext_resource type="Texture2D" uid="uid://ceh8ijfca4y5e" path="res://Assets/cat_assets/AttackCatb.png" id="2_eyw7o"]
[ext_resource type="Texture2D" uid="uid://dsxem5otcc85s" path="res://Assets/cat_assets/Die2Catb.png" id="3_7rjga"]
[ext_resource type="Texture2D" uid="uid://dc53raev4kghr" path="res://Assets/cat_assets/IdleCatb.png" id="4_giwe8"]
[ext_resource type="Texture2D" uid="uid://ctsufv2d7qtbs" path="res://Assets/cat_assets/JumpCabt.png" id="5_ma4b3"]
[ext_resource type="Texture2D" uid="uid://m5srcitww0xd" path="res://Assets/cat_assets/RunCatb.png" id="6_y5qyo"]
[ext_resource type="Texture2D" uid="uid://b575p72qsotxn" path="res://Assets/cat_assets/SleepCatb.png" id="7_a4aqe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ebjds"]
atlas = ExtResource("2_eyw7o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1dt5"]
atlas = ExtResource("2_eyw7o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_au0nh"]
atlas = ExtResource("2_eyw7o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76bt2"]
atlas = ExtResource("2_eyw7o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxias"]
atlas = ExtResource("2_eyw7o")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucfvk"]
atlas = ExtResource("2_eyw7o")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dyae"]
atlas = ExtResource("2_eyw7o")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u5n8"]
atlas = ExtResource("2_eyw7o")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_73nau"]
atlas = ExtResource("2_eyw7o")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skrk8"]
atlas = ExtResource("3_7rjga")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye16i"]
atlas = ExtResource("3_7rjga")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75u2t"]
atlas = ExtResource("3_7rjga")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qa1u"]
atlas = ExtResource("3_7rjga")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gu1l"]
atlas = ExtResource("3_7rjga")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsgy1"]
atlas = ExtResource("3_7rjga")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_el80s"]
atlas = ExtResource("3_7rjga")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxcm1"]
atlas = ExtResource("3_7rjga")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltww1"]
atlas = ExtResource("3_7rjga")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7mna"]
atlas = ExtResource("3_7rjga")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmwkj"]
atlas = ExtResource("3_7rjga")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3r5w"]
atlas = ExtResource("3_7rjga")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rslu"]
atlas = ExtResource("3_7rjga")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uyxa"]
atlas = ExtResource("3_7rjga")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61y8d"]
atlas = ExtResource("4_giwe8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8icv6"]
atlas = ExtResource("4_giwe8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwn6v"]
atlas = ExtResource("4_giwe8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms8fj"]
atlas = ExtResource("4_giwe8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_unmcv"]
atlas = ExtResource("4_giwe8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh552"]
atlas = ExtResource("4_giwe8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbxdm"]
atlas = ExtResource("4_giwe8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk7dk"]
atlas = ExtResource("5_ma4b3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uafw2"]
atlas = ExtResource("5_ma4b3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76puf"]
atlas = ExtResource("5_ma4b3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd4sy"]
atlas = ExtResource("5_ma4b3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqd4t"]
atlas = ExtResource("5_ma4b3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqjdw"]
atlas = ExtResource("5_ma4b3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_naw67"]
atlas = ExtResource("5_ma4b3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhkdx"]
atlas = ExtResource("5_ma4b3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4j0v"]
atlas = ExtResource("5_ma4b3")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hg8c"]
atlas = ExtResource("5_ma4b3")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw63b"]
atlas = ExtResource("5_ma4b3")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05yte"]
atlas = ExtResource("5_ma4b3")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkkvp"]
atlas = ExtResource("5_ma4b3")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6svqw"]
atlas = ExtResource("6_y5qyo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3p37"]
atlas = ExtResource("6_y5qyo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6lyf"]
atlas = ExtResource("6_y5qyo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2xv7"]
atlas = ExtResource("6_y5qyo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_130kv"]
atlas = ExtResource("6_y5qyo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1cqh"]
atlas = ExtResource("6_y5qyo")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a340w"]
atlas = ExtResource("6_y5qyo")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw78w"]
atlas = ExtResource("7_a4aqe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpyh0"]
atlas = ExtResource("7_a4aqe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmgjv"]
atlas = ExtResource("7_a4aqe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1c55x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebjds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1dt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au0nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76bt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxias")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucfvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dyae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u5n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73nau")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skrk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye16i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75u2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qa1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gu1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsgy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el80s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxcm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltww1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7mna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmwkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3r5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rslu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uyxa")
}],
"loop": true,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61y8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8icv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwn6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms8fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unmcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh552")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbxdm")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk7dk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uafw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76puf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd4sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqd4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqjdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naw67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhkdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4j0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hg8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw63b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05yte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkkvp")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6svqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3p37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6lyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2xv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_130kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1cqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a340w")
}],
"loop": true,
"name": &"run",
"speed": 16.0
}, {
"frames": [{
"duration": 1.21,
"texture": SubResource("AtlasTexture_nw78w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpyh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmgjv")
}],
"loop": false,
"name": &"sleep",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x6jt5"]
radius = 13.0
height = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pj27x"]
size = Vector2(31, 32)

[node name="Cat" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_2v165")

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_1c55x")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -5)
shape = SubResource("CapsuleShape2D_x6jt5")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="Level" type="Node2D" parent="."]

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(19.5, -4)
shape = SubResource("RectangleShape2D_pj27x")
debug_color = Color(1, 0, 0, 0.419608)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
